=== version 0.4.8 ===
* 修复: 一些代码 bug 和样式问题
* 改进：主题选项增加是否使用压缩 JS/CSS 文件；
* 增加：Bing webmaster 支持；

=== version 0.4.7 ===
* 增加: 增加面包屑导航;
* 改进: 主题自适应;
* 改进: 主题 SEO 细节优化;

=== version 0.4.6 ===

* 改进: 主样式支持 cdn 加速;
* 改进: 改进归档页面;
* 增加: 支持内嵌 Gist 链接;
* 改进: 使用 V2EX 提供的 avatar 加速服务;
* 改进: 删除部分 Wordpress 无用的新特性;

=== version 0.4.5 ===

* 改进: 主题样式改进;

=== version 0.4.4 ===

* 改进: 文章页面标题与面包屑插件合并;
* 改进: 文章页面前后页面导航链接优化;
* 改进: 页面与评论样式;
* 改进: 相关文章结构, 后台配置 yarpp 是选择 custom - list;

=== version 0.4.3 ===

* 修复: 评论头像图片未包含 alt 属性;
* 增加: 侧栏增加置顶文章推荐小工具;
* 增加: 文章编辑框添加 <h3> 和 <h4> 按钮;
* 增加: 新增侧栏小工具;
* 增加: 垃圾评论防护;
* 增加: 文章底部原创说明;
* 改进: 优化文章与评论样式;
* 改进: 调整侧栏 Tabber 小工具形式;
* 改进: 评论作者链接在新窗口打开;
* 改进: 高亮<pre><code>标签代码;

=== version 0.4.2 ===

* 修复: breadcrumbs 导航最后一个元素链接显示成文本格式;
* 修复: 代码中包含 pre 标签时处理失败;
* 修复: 侧栏从隐藏恢复到显示时, 跟随失效;
* 增加: 在分类页面增加描述信息;
* 增加: 文章编辑框添加 <pre> 和 <pre class="prettyprint"> 按钮;
* 增加: 新增站点地图文件名选项;
* 改进: 中文字体与等宽字体显示;
* 改进: 增加一些 SEO 优化;
* 改进: 优化页面标题;

=== version 0.4.1 ===

* 修复: 新增主题选项默认值无效;
* 增加: 新增文章结尾标记选项, 默认为'## End Post ##';
* 修复: 相关文章插件未安装时主题出错;
* 增加: 新增评论分页导航;
* 改进: 非管理员用户才会加载统计代码;

=== version 0.4.0 ===

* first released version