@@ -7,7 +7,7 @@
  */ ?>
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#" dir="ltr">
 <head profile="http://gmpg.org/xfn/11" >
 <title><?php dangopress_wp_title('-'); ?></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
